--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,30 +9,32 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.NoActionBar">
         <meta-data
             android:name="DATABASE"
             android:value="liset.db" /> <!-- nombre de la base de datos -->
         <meta-data
             android:name="VERSION"
-            android:value="2" /> <!-- cambiar la version para que el suggar orm se actualize la base de datos -->
+            android:value="5" /> <!-- cambiar la version para que el suggar orm se actualize la base de datos -->
         <meta-data
             android:name="QUERY_LOG"
             android:value="true" /> <!--  -->
         <meta-data
             android:name="DOMAIN_PACKAGE_NAME"
             android:value="com.cayhualla.practicacalificado_6.models" />
-        <activity android:name=".MainActivity">
+
+        <activity android:name=".Activities.MainActivity"></activity>
+        <activity android:name=".Activities.LoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".Activities.RegisterActivity" />
+        <activity android:name=".MyPreferencesActivity">
 
         </activity>
-        <activity android:name=".LoginActivity" >
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
-        <activity android:name=".RegisterActivity"></activity>
     </application>
 
 </manifest>
