--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,25 +8,25 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-       >
+        android:supportsRtl="true">
         <meta-data
             android:name="DATABASE"
             android:value="liset.db" /> <!-- nombre de la base de datos -->
         <meta-data
             android:name="VERSION"
-            android:value="5" /> <!-- cambiar la version para que el suggar orm se actualize la base de datos -->
+            android:value="7" /> <!-- cambiar la version para que el suggar orm se actualize la base de datos -->
         <meta-data
-            android:name="QUERY_LOG"
+            android:name="QUE       RY_LOG"
             android:value="true" /> <!--  -->
         <meta-data
             android:name="DOMAIN_PACKAGE_NAME"
             android:value="com.cayhualla.practicacalificado_6.models" />
 
-        <activity android:name=".Activities.MainActivity"
-            android:theme="@style/Theme.AppCompat"></activity>
-
-        <activity android:name=".Activities.LoginActivity"
+        <activity
+            android:name=".Activities.MainActivity"
+            android:theme="@style/Theme.AppCompat" />
+        <activity
+            android:name=".Activities.LoginActivity"
             android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,9 +35,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".Activities.RegisterActivity" />
-        <activity android:name=".MyPreferencesActivity">
-
-        </activity>
+        <activity android:name=".MyPreferencesActivity"></activity>
+        <activity android:name=".ProductoRegister"></activity>
     </application>
 
 </manifest>
