--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
             android:value="liset.db" /> <!-- nombre de la base de datos -->
         <meta-data
             android:name="VERSION"
-            android:value="12" /> <!-- cambiar la version para que el suggar orm se actualize la base de datos -->
+            android:value="13" /> <!-- cambiar la version para que el suggar orm se actualize la base de datos -->
         <meta-data
             android:name="QUERY_LOG"
             android:value="true" /> <!--  -->
@@ -34,7 +34,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.RegisterActivity" />
+        <activity android:name=".Activities.RegisterActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"/>
         <activity android:name=".Preferences.MyPreferencesActivity" />
         <activity
             android:name=".Activities.ProductoRegister"
